--- a/yaml/automation/valetudo-notifications.yaml
+++ b/yaml/automation/valetudo-notifications.yaml
@@ -104,7 +104,7 @@ variables:
       error_msg: "The robot has encountered an issue: {{ states( error_message_sensor ) }}"
       default_msg: "Everything is working fine."
     Hungary:
-      title: Porszívó
+      title: Porszívo
       success_msg: "A takarítás befejeződött {{ now().strftime('%-H:%M') }} , {{
         states("sensor.valetudo_svetlana_current_statistics_area") | int //
         10000 }} m2 , {{
