--- a/yaml/automation/valetudo-notifications.yaml
+++ b/yaml/automation/valetudo-notifications.yaml
@@ -104,9 +104,9 @@ variables:
       error_msg: "The robot has encountered an issue: {{ states( error_message_sensor ) }}"
       default_msg: "Everything is working fine."
     Hungary:
-      title: Porszívo
+      title: Porszivo
       success_msg: "A takarítás befejeződött {{ now().strftime('%-H:%M') }} , {{ states("sensor.valetudo_svetlana_current_statistics_area") | int //10000 }} m2 , {{ states("sensor.valetudo_svetlana_current_statistics_time") | int // 60 }} perc alatt ."
-      error_msg: "A robot hibát észlelt: {{ states( error_message_sensor ) }}"
+      error_msg: "A robot hibat eszlelt: {{ states( error_message_sensor ) }}"
       default_msg: Minden rendben van.
 
   notify_targets: >-
