--- a/yaml/automation/valetudo-notifications.yaml
+++ b/yaml/automation/valetudo-notifications.yaml
@@ -103,9 +103,9 @@ variables:
       success_msg: "Cleaning task succeeded at {{ now().strftime('%-H:%M') }}."
       error_msg: "The robot has encountered an issue: {{ states( error_message_sensor ) }}"
       default_msg: "Everything is working fine."
-    German:
+    Hungary:
       title: Porszivo
-      success_msg: "A takarítás befejeződött {{ states("sensor.valetudo_svetlana_current_statistics_area") | int //10000 }} m2 , {{ now().strftime('%-H:%M') }} ."
+      success_msg: "A takarítás befejeződött {{ now().strftime('%-H:%M') }}."
       error_msg: "A robot hibát észlelt: {{ states( error_message_sensor ) }}"
       default_msg: Minden rendben van..
 
