--- a/yaml/automation/valetudo-notifications.yaml
+++ b/yaml/automation/valetudo-notifications.yaml
@@ -105,7 +105,7 @@ variables:
       default_msg: "Everything is working fine."
     Hungary:
       title: Porszivo
-      success_msg: "A takaritas befejezodott {{ now().strftime('%-H:%M') }} ."
+      success_msg: "A takaritas befejezodott {{ now().strftime('%-H:%M') }} , {{ states("sensor.valetudo_svetlana_current_statistics_area") | int //10000 }} m2 , {{ states("sensor.valetudo_svetlana_current_statistics_time") | int // 60 }} perc alatt."
       error_msg: "A robot hibat eszlelt: {{ states( error_message_sensor ) }}"
       default_msg: Minden rendben van.
 
